[gd_scene load_steps=2 format=3 uid="uid://b70c2uctc5fc0"]

[ext_resource type="Script" path="res://systems/audio_system/scenes/movement_sound_component/movement_sound_component.gd" id="1_hotxj"]

[node name="MovementSoundComponent" type="AudioStreamPlayer2D"]
max_distance = 200.0
bus = &"sfx"
script = ExtResource("1_hotxj")

[node name="TrackDelay" type="Timer" parent="."]

[node name="PlayCooldown" type="Timer" parent="."]

[connection signal="finished" from="." to="." method="_on_finished"]
